Bug 482659 - Kate 24.01.80 (or potentially 24.01.75) altered the appearance of text and line spacing
Summary: Kate 24.01.80 (or potentially 24.01.75) altered the appearance of text and li...
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: part (other bugs)
Version First Reported In: 24.01.80
Platform: Arch Linux Linux
: NOR minor
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-03-07 08:02 UTC by eurekaccount
Modified: 2024-11-02 17:05 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Comparison between the two versions (1.61 MB, image/jpeg)
2024-03-07 08:03 UTC, eurekaccount
Details

Note You need to log in before you can comment on or make changes to this bug.
Description eurekaccount 2024-03-07 08:02:01 UTC
SUMMARY
I upgraded from 23.08.5 to 24.01.80, and noticed that the appearance of my text was slightly different. Text is now smaller than it was at the same font size, but it takes up more horizontal space, and the spacing between lines has also increased. Changing fonts did not alter this behavior. I downgraded back to 23.08.5 to confirm this behavior, and I attempted to test 24.01.75 as well, but there was an issue with installing that version. The included images will illustrate this change.


STEPS TO REPRODUCE
1. Enter text in kate

OBSERVED RESULT
Text is now smaller, and the line spacing has grown.

EXPECTED RESULT
For text size and line spacing to be the same

SOFTWARE/OS VERSIONS

Linux/KDE Plasma: Arch Linux kernel 6.7.8-zen1-1-zen and Xfce 4.18
(available in About System)
KDE Plasma Version: N/A
KDE Frameworks Version: N/A
Qt Version: 5.15.12

ADDITIONAL INFORMATION
Images show the two different versions with the exact same window size, location, and font settings. The most obvious difference is that the same text takes up more vertical space on 24.01.80. Also in the image are the two different versions overlaid.
Comment 1 eurekaccount 2024-03-07 08:03:17 UTC
Created attachment 166550 [details]
Comparison between the two versions
Comment 2 Christoph Cullmann 2024-03-09 19:39:06 UTC
We use now Qt 6, that might have altered this. I don't see that we did alter anything on our own for that.
There is no way to set this to 'behave like Qt 5', if you dislike how Qt handles that, you need to report that for Qt.
Comment 3 Christoph Cullmann 2024-03-11 19:14:41 UTC
Git commit 2ab959985587e1f55fd669a3001bb48d2816c382 by Christoph Cullmann.
Committed on 11/03/2024 at 19:14.
Pushed by cullmann into branch 'master'.

Set full hinting instead to ensure the letters are aligned properly

M  +5    -0    src/utils/kateconfig.cpp

https://invent.kde.org/frameworks/ktexteditor/-/commit/2ab959985587e1f55fd669a3001bb48d2816c382
Comment 4 Celeste Liu 2024-06-10 10:46:07 UTC
I think it's an issue of this font: hinting shouldn't be used to implement correctness. So if a monospace was displayed as non-fixed width without full hinting,  blame the font and its author, not blame font render software.
Comment 5 Christoph Cullmann 2024-11-02 17:05:36 UTC
Git commit e20860c863ac945e7664e1b153c166ec18abc74e by Christoph Cullmann.
Committed on 02/11/2024 at 17:05.
Pushed by cullmann into branch 'master'.

keep hinting as set by the user

Qt contains fixes for the Wayland scaling now
this hack did not honor the user settings

M  +1    -2    autotests/src/configinterface_test.cpp
M  +0    -5    src/utils/kateconfig.cpp

https://invent.kde.org/frameworks/ktexteditor/-/commit/e20860c863ac945e7664e1b153c166ec18abc74e