Set full hinting instead to ensure the letters are aligned properly

BUG: 482659